src/objects/QuoteLineItem.object
<CustomObject>
    <fields>
        <fullName>Connection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Connection</label>
        <referenceTo>Connection__c</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>Quote_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duration_status__c</fullName>
        <label>Duration status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Defined with renewal</fullName>
                </value>
                <value>
                    <fullName>Undefined</fullName>
                </value>
                <value>
                    <fullName>Defined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EAN_Id__c</fullName>
        <formula>Connection__r.EAN__c</formula>
        <label>EAN Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EAV__c</fullName>
        <label>EAV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fine_Electricity__c</fullName>
        <label>Fine Electricity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fine_Gas__c</fullName>
        <label>Fine Gas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <formula>TEXT( PricebookEntry.Product2.Frequency__c )</formula>
        <label>Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length_Of_Solar_Panel__c</fullName>
        <label>Length Of Solar Panel</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Margin_Electrcity__c</fullName>
        <label>Margin Electrcity</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Margin_Gas__c</fullName>
        <label>Margin Gas</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Maximum_Sales_Price__c</fullName>
        <label>Maximum Sales Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Usage_kWh__c</fullName>
        <label>Maximum Usage (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Usage_m3__c</fullName>
        <label>Maximum Usage (m3)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Volume_kWh__c</fullName>
        <label>Maximum Volume (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Volume_m3__c</fullName>
        <label>Maximum Volume (m3)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Solar_Panels__c</fullName>
        <label>Number Of Solar Panels</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Boilers__c</fullName>
        <label>Number of Boilers</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Thermostats__c</fullName>
        <label>Number of Thermostats</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Electricity</fullName>
                </value>
                <value>
                    <fullName>Gas</fullName>
                </value>
                <value>
                    <fullName>Non-Commodity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote_Reason__c</fullName>
        <label>Quote Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Business</fullName>
                </value>
                <value>
                    <fullName>Retention</fullName>
                </value>
                <value>
                    <fullName>Extension</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_Of_Boiler__c</fullName>
        <label>Type Of Boiler</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Of_Thermostat__c</fullName>
        <label>Type Of Thermostat</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Usage_Day_kWh__c</fullName>
        <label>Usage Day (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Usage_Night_kWh__c</fullName>
        <label>Usage Night (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Usage_Total_Hour_kWh__c</fullName>
        <label>Usage Total Hour (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Utility_Type__c</fullName>
        <label>Utility Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Variable_Bandwidth_Electricity__c</fullName>
        <label>Variable Bandwidth Electricity</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Variable_Bandwidth_Gas__c</fullName>
        <label>Variable Bandwidth Gas</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Volume_Off_Peak_kWh__c</fullName>
        <label>Volume Off-Peak (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volume_Peak_kWh__c</fullName>
        <label>Volume Peak (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yearly_Usage_per_Connection_kWh__c</fullName>
        <label>Yearly Usage per Connection (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yearly_Usage_per_Connection_m3__c</fullName>
        <label>Yearly Usage per Connection (m3)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>